--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.12",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.11.0",
+    "google-auth-library": "^10.3.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
