feat: Modernize Docker Compose syntax across entire project
- Replace deprecated docker-compose commands with docker compose syntax
- Update all scripts: deploy.sh, deploy-production.sh, setup-ec2.sh
- Modernize documentation: README.md, AWS guides, EC2 setup docs
- Switch to Docker Compose plugin installation method (recommended)
- Add compatibility notes explaining deprecation on modern platforms
- Fix GitHub Actions compatibility issues with Docker Compose v2
- Update troubleshooting commands in documentation
- Add comprehensive modernization summary documentation

This ensures compatibility with GitHub Actions, AWS, and modern Docker
installations where standalone docker-compose is deprecated.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,7 +101,16 @@ jobs:
         
     - name: Docker Build Test
       run: |
-        docker-compose build
+        # Test individual Docker builds first
+        docker build -t highway-delite-backend ./server
+        docker build -t highway-delite-frontend ./client
+        echo "Individual Docker builds successful"
+        
+    - name: Docker Compose Test
+      run: |
+        # Test docker compose (newer syntax)
+        docker compose build
+        echo "Docker Compose build successful"
         
   deploy:
     needs: test
@@ -192,10 +201,10 @@ jobs:
           EOF
           
           # Stop existing containers
-          docker compose down || docker-compose down || true
+          docker compose down || true
           
           # Start new deployment
-          docker compose up -d --build || docker-compose up -d --build
+          docker compose up -d --build
           
           # Wait for services to start
           sleep 30
@@ -207,10 +216,10 @@ jobs:
             rm -rf ../backup
           else
             echo "Deployment failed! Rolling back..."
-            docker compose down || docker-compose down || true
+            docker compose down || true
             if [ -d "../backup" ]; then
               cd ../backup
-              docker compose up -d || docker-compose up -d
+              docker compose up -d
             fi
             exit 1
           fi
@@ -230,6 +239,6 @@ jobs:
           echo "Time: $(date)"
           echo "Commit: ${{ github.sha }}"
           echo "Services:"
-          docker compose ps || docker-compose ps
+          docker compose ps
           echo "Health Check:"
           curl -s http://localhost:5000/ | head -1 || echo "Service unavailable"
