fix: Resolve GitHub Actions tar deployment package error
- Add --warning=no-file-changed flag to prevent tar exit code 1
- Improve exclusion patterns for cleaner deployment package
- Exclude build artifacts, logs, and temporary files
- Fix 'file changed as we read it' error in CI/CD pipeline

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -124,11 +124,22 @@ jobs:
       
     - name: Create deployment package
       run: |
+        # Create a clean deployment package excluding unnecessary files
         tar -czf deployment.tar.gz \
           --exclude='.git' \
+          --exclude='*.git*' \
           --exclude='node_modules' \
           --exclude='*/node_modules' \
+          --exclude='**node_modules' \
           --exclude='.github' \
+          --exclude='*.log' \
+          --exclude='*.tmp' \
+          --exclude='deployment.tar.gz' \
+          --exclude='.env*' \
+          --exclude='coverage' \
+          --exclude='dist' \
+          --exclude='build' \
+          --warning=no-file-changed \
           .
           
     - name: Deploy to EC2
