Fix: vite_api_url fallback issue

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -15,7 +15,9 @@ COPY . .
 
 # Build argument for API URL
 ARG VITE_API_URL
+ARG VITE_GOOGLE_CLIENT_ID
 ENV VITE_API_URL=$VITE_API_URL
+ENV VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID
 
 # Build the application
 RUN npm run build
