--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,8 @@ services:
     build: 
       context: ./client
       args:
-        VITE_API_URL: ${VITE_API_URL:-http://localhost:5000/api}
-        VITE_GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+        VITE_API_URL: ${VITE_API_URL}
+        VITE_GOOGLE_CLIENT_ID: ${VITE_GOOGLE_CLIENT_ID}
     container_name: highway-delite-frontend
     restart: unless-stopped
     ports:
