fix: Correct Gmail environment variable names in docker-compose.yml
This fixes the environment variable mismatch causing email service failures.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
       PORT: 5000
       MONGODB_URI: mongodb://highway_user:${MONGO_PASSWORD}@mongodb:27017/highway_delite
       JWT_SECRET: ${JWT_SECRET}
-      GMAIL_EMAIL: ${GMAIL_EMAIL}
-      GMAIL_PASSWORD: ${GMAIL_PASSWORD}
+      GMAIL_USER: ${GMAIL_USER}
+      GMAIL_APP_PASSWORD: ${GMAIL_APP_PASSWORD}
       GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
       GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
     ports:
